--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <script src="index.js"></script>
     <style>
       .card-img-top {
-        width: 25%;
+        width: 60%;
       }
       .card {
       }
@@ -94,19 +94,24 @@
       </div>
     </nav>
     <h1 class="text-center">Amazon 2</h1>
-    <div class="card-group" id="cardList">
-      <div class="card">
-        <img src="" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">API NOT WORKING</p>
-          <p class="card-text">
-            <small class="text-muted">Last updated 3 mins ago</small>
-          </p>
+
+    <div class="container">
+      <div class="row row-cols-1 row-cols-md-1" id="cardList">
+        <div class="col mb-4">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                This is a longer card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
