--- a/backoffice.html
+++ b/backoffice.html
@@ -149,6 +149,7 @@
       >
         Clear all products
       </button>
+      <div style="margin-top: 70px" id="alertContainer"></div>
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
