--- a/backoffice.html
+++ b/backoffice.html
@@ -86,7 +86,7 @@
         </ul>
       </div>
     </nav>
-    <h1 class="text-center mb-4">Back Office</h1>
+    <h1 class="text-center mb-3 mt-3">Back Office</h1>
     <h2 class="text-center mb-3">Create a product:</h2>
     <div class="container">
       <form>
@@ -114,12 +114,11 @@
           <label for="productPriceForm" class="font-weight-bold"
             >Product Price</label
           >
-          <textarea
+          <input
             class="form-control"
             id="productPriceForm"
-            rows="3"
             placeholder="Input the product's price in £"
-          ></textarea>
+          ></input>
         </div>
         <div class="form-group">
           <label for="productDescriptionForm" class="font-weight-bold"
