--- a/index.html
+++ b/index.html
@@ -61,8 +61,6 @@
       .card-img-top {
         width: 60%;
       }
-      .card {
-      }
     </style>
   </head>
 
@@ -93,7 +91,7 @@
         </ul>
       </div>
     </nav>
-    <h1 class="text-center">Amazon 2</h1>
+    <h1 class="text-center mt-3 mb-3">Amazon 2</h1>
 
     <div class="container">
       <div class="row row-cols-1 row-cols-md-1" id="cardList">
