--- a/backoffice.html
+++ b/backoffice.html
@@ -148,7 +148,9 @@
       >
         Clear all products
       </button>
-      <div style="margin-top: 70px" id="alertContainer"></div>
+      <div style="margin-top: 70px" id="alertContainer">
+        <div style="display:none;" id="showalert" class="alert"></div>
+      </div>
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
